--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,13 @@ section#mobile {
     width: 311px;
    
     background: url(../imagens/frame-iphone.png) no-repeat;
-    
 
+}
+
+iframe#screen {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
