--- a/styles/style.css
+++ b/styles/style.css
@@ -42,3 +42,24 @@ iframe#screen {
     width: 269px;
     height: 471px;
 }
+
+section#social-medias {
+    text-align: right;
+}
+
+
+section#social-medias img {
+width: 50px;
+margin: 10px;
+border-radius: 50%;
+box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+box-sizing: border-box;
+
+}
+
+section#social-medias img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.319);
+    transform: translate(-3px,-3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.667);
+    transition: .3s, border 1s;
+}
